# symrank

./: .gitignore  CHANGELOG.md  README.md  profile.html  profile.json  pyproject.toml
.github/workflows/: CI.yml  ci-build.yml  ci-check.yml
benchmarks/: benchmark_compare_vs_numpy.py  benchmark_compare_vs_sklearn.py  benchmark_symrank.py  matrix_vs_list_api.py  matrix_vs_numpy_sklearn.py  results_comparisons.py  simd_vs_standard.py  speed_comparison.py  speed_comparisons.py  speed_comparisons_batch.py  speed_comparisons_streaming_10k.py  speed_comparisons_streaming_10k_batch.py  speed_comparisons_with_batch.py  speed_standard_vs_batch.py  threadpool_info.py  top_k_results.py
src/symrank/: __init__.py  compare.py  cosine.py  cosine_similarity.py  cosine_similarity_matrix.py
symrank-core/: Cargo.toml
symrank-core/src/: cosine_similarity.rs  lib.rs
tests/: test_compare.py  test_cosine.py  test_cosine_similarity.py  test_cosine_similarity_batch.py  test_cosine_similarity_matrix.py
