[package]
name = "symrank" # <-- Rust crate name
version = "0.2.0"
edition = "2021"
resolver = "2" # <-- Avoid compiling unnecessary features from dependencies.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "symrank" # <-- This is the name of the compiled Python module
crate-type = ["cdylib"]

[dependencies]
# ndarray = { version = "0.17.1", features = ["rayon"] }
numpy = "0.27.1"
ordered-float = "5.1.0"
pyo3 = { version = "0.27.2", features = ["extension-module"] }
rayon = "1.11.0"
rand = "0.9.2" 
wide = "1.1.1" # <-- SIMD support for Rust

[profile.release]
lto = true # <-- Enable Link-Time Optimization
codegen-units = 1 # <-- Single compilation unit for better optimization
opt-level = 3 # <-- Full optimization for speed
